validação produto e vendedor já cadastrado